--- a/Pipfile
+++ b/Pipfile
@@ -4,11 +4,13 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
+autopep8 = "*"
 
 [packages]
 pytest = "*"
 pytest-cov = "*"
 coverage = "*"
+pytest-repeat = "*"
 
 [requires]
 python_version = "3.7"
